tests/neg-custom-args/captures/leak-use-capset.check
-- Error: tests/neg-custom-args/captures/leak-use-capset.scala:5:49 ----------------------------------------------------
5 |private def g[C^] = (xs: List[Object^{C}]) => xs.head // error TODO: allow this
  |                                              ^^^^^^^
  |                                              Capture set parameter C leaks into capture scope of method g.
